apps/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
spec:
  type: ClusterIP
  selector:
    app: frigate
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: https-ui
      port: 8971
      targetPort: 8971
    - name: rtsp
      port: 8554
      targetPort: 8554
    - name: webrtc-tcp
      port: 8555
      targetPort: 8555
      protocol: TCP
    - name: webrtc-udp
      port: 8555
      targetPort: 8555
      protocol: UDP
